# CVEDIA-RT-SDK

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  build.sh  config.h.in
cvedia-rt/src/: CMakeLists.txt  CMakePresets.json  config.h.in
cvedia-rt/src/RTCORE/include/: cvalue.h  defines.h  rtcore.h  rterror.h
cvedia-rt/src/RTCORE/include/api/: buffer.h  config.h  convert.h  events.h  factory.h  inference.h  input.h  instances.h  logging.h  lua.h  output.h  registry.h  rt.h  solutions.h  state.h  system.h  thread.h  ui.h  util.h  web.h
cvedia-rt/src/RTCORE/include/builtin/: basetypes.h  bufferlua.h  buffermgr.h  buffermgrlua.h  bufferopencv.h  configcheck.h  confighelper.h  cvdictimpl.h  functions.h  globalconfig.h  globalevents.h  globalstate.h  kalman.h  lockableobject.h  moduleimpl.h  objectregistry.h  performancebase.h  sink.h  tensor.h
cvedia-rt/src/RTCORE/include/interface/: buffer.h  classifiereval.h  cocoeval.h  cvdict.h  datasethandler.h  eventaction.h  eventactionhandler.h  eventdispatcher.h  eventstorage.h  imagereader.h  inferenceengine.h  inferencehandler.h  input.h  inputhandler.h  instance.h  instancedescriptor.h  luamanager.h  luaworkers.h  module.h  motiondetection.h  mqtt.h  output.h  outputhandler.h  renderer.h  rest.h  scriptengine.h  solution.h  tracker.h  tripwire.h  uicallback.h  videoreader.h  visualizer.h  window.h  writedata.h  zmq.h  zone.h
cvedia-rt/src/RTCORE/include/internal/: inferenceregistry.h  threadmanager.h
cvedia-rt/src/cli/: CMakeLists.txt
cvedia-rt/src/cli/runinference/: CMakeLists.txt  runinference.cpp
samples/Plugins/ONNX/: CMakeLists.txt
samples/Plugins/ONNX/include/: onnxcore.h  onnxinferencehandler.h  onnxstatic.h
samples/Plugins/ONNX/src/: onnxcore.cpp  onnxinferencehandler.cpp
samples/Plugins/PostClassifier/: CMakeLists.txt
samples/Plugins/PostClassifier/src/: postclassifier.cpp
samples/cli/push_frame_demo_c/: CMakeLists.txt  pfdemo.c
samples/cli/push_frame_demo_cpp/: CMakeLists.txt  pfdemo.cpp
samples/cli/rtspdemo/: CMakeLists.txt  rtspdemo.cpp
src/bindings/dotnet/: CMakeLists.txt  arrays_csharp.i  core_csharp.i  license_csharp.i  rt_csharp.i  securt_csharp.i  solutions_csharp.i  system_csharp.i  types.i
src/bindings/python/: CMakeLists.txt  core_py.i  cvediart.i  rt_py.i  securt_py.i
src/solutions/: CMakeLists.txt
src/solutions/include/common/: analytics_manager.h  context.h  functions.h  solution_config.h  solution_manager.h
src/solutions/include/core/: core_capi.h  core_sse_api.h  core_sse_api_client.h
src/solutions/include/securt/: securt.h  securt_capi.h  securt_sse_api.h
src/solutions/src/common/: analytics_manager.cpp  context.cpp  discovery.cpp  functions.cpp  solution_manager.cpp
src/solutions/src/core/: core_capi.cpp  core_sse_api.cpp  core_sse_api_client.cpp
src/solutions/src/rest/: .openapi-generator-ignore
src/solutions/src/rest/.openapi-generator/: FILES
src/solutions/src/rest/include/rt_rest_client/: ApiClient.h  ApiConfiguration.h  ApiException.h  HttpContent.h  IHttpBody.h  JsonBody.h  ModelBase.h  MultipartFormData.h  Object.h
src/solutions/src/rest/include/rt_rest_client/api/: RTCoreApi.h  SecuRTApi.h  SecuRTAreasApi.h  SecuRTLinesApi.h
src/solutions/src/rest/include/rt_rest_client/model/: AnalyticsType.h  AppearanceSearchMode.h  AreaAlprRead.h  AreaAlprWrite.h  AreaArmedPersonRead.h  AreaArmedPersonWrite.h  AreaCrossingRead.h  AreaCrossingWrite.h  AreaCrowdingRead.h  AreaCrowdingWrite.h  AreaEvent.h  AreaFallenPersonRead.h  AreaFallenPersonWrite.h  AreaIntrusionRead.h  AreaIntrusionWrite.h  AreaLicenseControlRead.h  AreaLicenseControlWrite.h  AreaLoiteringRead.h  AreaLoiteringWrite.h  AreaObjectLeftRemovedRead.h  AreaObjectLeftRemovedWrite.h  Class.h  Coordinate.h  CoreConsumeEventsV1_200_response_inner.h  CoreCreateInstanceV1_201_response.h  CoreGetFrameV1_200_response.h  CoreGetInstancesV1_200_response.h  CoreGetLicensesV1_200_response.h  CoreGetLogV1_200_response.h  CoreGetSolutionsV1_200_response.h  CoreGetSolutionsV1_200_response_solutions.h  CoreGetSystemConfigV1_200_response.h  CoreGetSystemInfoV1_200_response.h  CoreGetVersionV1_200_response.h  CorePostInstanceConfigV1_request.h  CorePostInstanceStateV1_request.h  CorePutSystemConfigV1_request.h  CorePutSystemConfigV1_request_systemConfig_inner.h  (+42 more)
src/solutions/src/rest/include/securt_rest_client/: ApiClient.h  ApiConfiguration.h  ApiException.h  IHttpBody.h  JsonBody.h  ModelBase.h  MultipartFormData.h  Object.h
src/solutions/src/rest/src/: ApiClient.cpp  ApiConfiguration.cpp  ApiException.cpp  HttpContent.cpp  JsonBody.cpp  ModelBase.cpp  MultipartFormData.cpp  Object.cpp
src/solutions/src/rest/src/api/: RTCoreApi.cpp  SecuRTApi.cpp  SecuRTAreasApi.cpp  SecuRTLinesApi.cpp
src/solutions/src/rest/src/model/: AnalyticsType.cpp  AppearanceSearchMode.cpp  AreaAlprRead.cpp  AreaAlprWrite.cpp  AreaArmedPersonRead.cpp  AreaArmedPersonWrite.cpp  AreaCrossingRead.cpp  AreaCrossingWrite.cpp  AreaCrowdingRead.cpp  AreaCrowdingWrite.cpp  AreaEvent.cpp  AreaFallenPersonRead.cpp  AreaFallenPersonWrite.cpp  AreaIntrusionRead.cpp  AreaIntrusionWrite.cpp  AreaLicenseControlRead.cpp  AreaLicenseControlWrite.cpp  AreaLoiteringRead.cpp  AreaLoiteringWrite.cpp  AreaObjectLeftRemovedRead.cpp  AreaObjectLeftRemovedWrite.cpp  Class.cpp  Coordinate.cpp  CoreConsumeEventsV1_200_response_inner.cpp  CoreCreateInstanceV1_201_response.cpp  CoreGetFrameV1_200_response.cpp  CoreGetInstancesV1_200_response.cpp  CoreGetLicensesV1_200_response.cpp  CoreGetLogV1_200_response.cpp  CoreGetSolutionsV1_200_response.cpp  CoreGetSolutionsV1_200_response_solutions.cpp  CoreGetSystemConfigV1_200_response.cpp  CoreGetSystemInfoV1_200_response.cpp  CoreGetVersionV1_200_response.cpp  CorePostInstanceConfigV1_request.cpp  CorePostInstanceStateV1_request.cpp  CorePutSystemConfigV1_request.cpp  CorePutSystemConfigV1_request_systemConfig_inner.cpp  CoreSetInputV1_request.cpp  CoreSetOutputHlsV1_200_response.cpp  (+40 more)
src/solutions/src/securt/: securt.cpp  securt_capi.cpp  securt_sse_api.cpp
(+205 files in other folders)
